# SpellCLI

./: .gitignore  Cargo.toml  LICENSE  README.md
spellcli/: Cargo.toml
spellcli/src/: main.rs  word_process.rs
src/: main.rs  math.rs  word_process.rs
